# engine-51

./: .clang-format  .gitignore  CMakeLists.txt  ConfigureWindows.bat  Readme.md  vcpkg-configuration.json  vcpkg.json
a51lib/: BinLevel.cpp  BinLevel.h  Bitmap.cpp  Bitmap.h  CMakeLists.txt  CollisionVolume.cpp  CollisionVolume.h  Colour.h  DFSFile.cpp  DFSFile.h  DataReader.h  Doxyfile  EventMgr.cpp  EventMgr.h  GameGlobals.cpp  Geom.cpp  Geom.h  Guid.cpp  Guid.h  Helpers.cpp  Helpers.h  InevFile.cpp  InevFile.h  LevelTemplate.cpp  LevelTemplate.h  PerceptionMgr.cpp  PerceptionMgr.h  PlatformDef.h  Playsurface.cpp  Playsurface.h  PlaysurfaceDB.cpp  PlaysurfaceDB.h  PlaysurfaceMgr.cpp  PlaysurfaceMgr.h  Property.cpp  Property.h  PropertyDefs.h  PropertyEnum.h  RTTI.h  ResourceManager.cpp  (+9 more)
a51lib/animation/: AnimEvent.cpp  AnimGroup.cpp  AnimInfo.cpp  AnimKeyData.cpp  AnimPlayer.cpp  AnimPlayer.h  AnimTrack.cpp  AnimTrack.h  BasePlayer.cpp  BasePlayer.h  CharAnimPlayer.cpp  CharAnimPlayer.h  SMemMatrixCache.cpp  SMemMatrixCache.h  animData.cpp  animData.h  animDecompress.cpp
a51lib/characters/: ActorEffects.cpp  ActorEffects.h  FloorProperties.cpp  FloorProperties.h  God.cpp  God.h  factions.h
a51lib/collisionMgr/: CollisionMgr.cpp  CollisionMgr.h  CollisionMgr_Private.h  CollisionPrimatives.cpp  CollisionPrimatives.h  GridWalker.cpp  GridWalker.h  PolyCache.cpp  PolyCache.h
a51lib/dataUtil/: Bitstream.cpp  Bitstream.h  Crc.cpp  Crc.h  TextIn.cpp  TextIn.h  Tokenizer.cpp  Tokenizer.h
a51lib/dataVault/: DataVault.cpp  DataVault.h
a51lib/decals/: DecalDefinition.cpp  DecalDefinition.h  DecalMgr.cpp  DecalMgr.h  DecalPackage.cpp  DecalPackage.h
a51lib/fx/: fx_Ctrl.cpp  fx_Effect.cpp  fx_Element.cpp  fx_Handle.cpp  fx_Mgr.cpp  fx_Mgr.h  fx_Mgr_insert.h  fx_Mgr_private.h
a51lib/gltf/: tiny_gltf.cpp
a51lib/inputMgr/: GamePad.cpp  GamePad.h  InputMgr.cpp  InputMgr.h
a51lib/inventory/: Inventory.cpp  Inventory.h
a51lib/io/: FileSystem.cpp  FileSystem.h
a51lib/levels/: Level.h  LevelLoader.cpp  LevelLoader.h  LevelTemplate.cpp  LevelTemplate.h  VariableManager.h
a51lib/levels/navigation/: NavMap.cpp  NavMap.h
a51lib/loco/: CharacterPhysics.cpp  CharacterPhysics.h  Loco.cpp  Loco.h  LocoAdditiveController.cpp  LocoAdditiveController.h  LocoAimController.cpp  LocoAimController.h  LocoAnimController.cpp  LocoAnimController.h  LocoCharAnimPlayer.cpp  LocoCharAnimPlayer.h  LocoIKSolver.cpp  LocoIKSolver.h  LocoMaskController.cpp  LocoMaskController.h  LocoMotionController.cpp  LocoMotionController.h
a51lib/math/: BoundingBox.cpp  BoundingBox.h  CommonMath.h  Matrix4.cpp  Matrix4.h  Plane.h  Quaternion.cpp  Quaternion.h  Radian3.h  Random.cpp  Random.h  Vector3.cpp  Vector3.h
a51lib/objectManager/: ObjectManager.cpp  ObjectManager.h  ObjectPtr.h
a51lib/objects/: Actor.cpp  Actor.h  AnimSurface.h  Corpse.cpp  Corpse.h  CorpsePain.cpp  CorpsePain.h  Event.h  HudObject.cpp  HudObject.h  LoreObject.cpp  LoreObject.h  NewWeapon.cpp  NewWeapon.h  Object.cpp  Object.h  ObjectRegistrar.cpp  ObjectRegistrar.h  ParticleEventEmitter.cpp  ParticleEventEmitter.h  Pickup.h  PlaySurface.cpp  PlaySurface.h  Player.h  PlayerCombat.cpp  PlayerInput.cpp  PlayerLoco.cpp  PlayerLoco.h  PlayerObject.cpp  PlayerOnline.cpp  PlayerPhysics.cpp  PlayerState.cpp  Projector.cpp  Projector.h  ThirdPersonCamera.cpp  ThirdPersonCamera.h
a51lib/objects/render/: RenderInst.cpp  RenderInst.h  RigidInst.cpp  RigidInst.h  SkinInst.cpp  SkinInst.h  VirtualMeshMask.cpp  VirtualMeshMask.h  VirtualTextureMask.cpp  VirtualTextureMask.h
a51lib/objects/sound/: EventSoundEmitter.cpp  EventSoundEmitter.h
a51lib/painManager/: Pain.cpp  Pain.h  PainMgr.cpp  PainMgr.h
a51lib/physics/: Collider.cpp  Collider.h  CollisionShape.cpp  CollisionShape.h  Constraint.cpp  Constraint.h  PhysicsInst.cpp  PhysicsInst.h  PhysicsMgr.cpp  PhysicsMgr.h  RigidBody.cpp  RigidBody.h
a51lib/render/: CollisionVolume.cpp  CollisionVolume.h  Geom.cpp  Geom.h  Material.cpp  Material.h  MaterialArray.cpp  MaterialArray.h  Material_Prefs.h  Render.cpp  Render.h  RigidGeom.cpp  RigidGeom.h  SkinGeom.cpp  SkinGeom.h  Texture.cpp  Texture.h
a51lib/resourceManager/: ResourceLoaders.cpp  ResourceLoaders.h  ResourceManager.cpp  ResourceManager.h
a51lib/spatialDBase/: SpatialDBase.cpp  SpatialDBase.h  SpatialDBase_inline.h
a51lib/state/: CheckPointMgr.h  GameConfig.h  Inventory.h  LoreList.h  MapList.cpp  MapList.h  PlayerProfile.cpp  PlayerProfile.h  StateMachine.cpp  StateMachine.h  stateMachine.cpp
a51lib/strings/: StringTable.cpp  StringTable.h
a51lib/system/: Engine.h  InputGadget.h  Renderer.h
a51lib/trigger/: Trigger_Actions.cpp  Trigger_Actions.h  Trigger_Conditionals.h  Trigger_Object.h
a51lib/trigger/actions/: lock_player_view.h
a51lib/tweakManager/: TweakMgr.cpp  TweakMgr.h
a51lib/ui/: UIBitmap.cpp  UIBitmap.h  UIButton.cpp  UIButton.h  UIControl.cpp  UIControl.h  UIDialog.cpp  UIDialog.h  UIFont.cpp  UIFont.h  UIListBox.cpp  UIListBox.h  UIManager.cpp  UIManager.h  UIText.cpp  UIText.h  UIWindow.cpp  UIWindow.h
a51lib/ui/dialogs/: PressStartDialog.cpp  campaignMenuDialog.cpp  campaignMenuDialog.h  esrbDialog.cpp  esrbDialog.h  loadGameDialog.cpp  loadGameDialog.h  mainMenuDialog.cpp  mainMenuDialog.h  pressStartDialog.h  profileSelectDialog.cpp  profileSelectDialog.h  startGameDialog.cpp  startGameDialog.h
a51lib/view/: View.cpp  View.h
a51lib/xfiles/: scratchMem.cpp  scratchMem.h  xHandle.h  xHandleArray.h  x_plus.cpp  x_plus.h  x_time.cpp  x_time.h  xfs.cpp  xfs.h
a51lib/zoneManager/: ZoneManager.cpp  ZoneManager.h
tools/DFSViewer/: CMakeLists.txt  cube.h  gltfExporter.cpp  gltfExporter.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  modelWidget.cpp  modelWidget.h
tools/qtgame/: CMakeLists.txt  gameObject.cpp  gameObject.h  gameWindow.cpp  gameWindow.h  main.cpp
tools/qtgame/system/: QtEngine.h  QtRenderer.cpp  QtRenderer.h
tools/sdlgame/: CMakeLists.txt  gameObject.cpp  gameObject.h  main.cpp
tools/sdlgame/system/: SDL_Engine.cpp  SDL_Engine.h  SDL_Renderer.cpp  SDL_Renderer.h
(+26 files in other folders)
