
add_library(a51lib)
find_package(SDL3 CONFIG REQUIRED)

set(GLTF_SOURCES
        gltf/json.hpp
	gltf/tiny_gltf.cpp
	gltf/tiny_gltf.h
)

set(ANIM_SOURCES
        animation/animData.cpp
        animation/animData.h
        animation/animDecompress.cpp
        animation/animGroup.cpp
        animation/AnimEvent.cpp
        animation/AnimInfo.cpp
        animation/AnimKeyData.cpp
        animation/AnimPlayer.cpp
        animation/AnimPlayer.h
        animation/AnimTrack.cpp
        animation/AnimTrack.h
        animation/BasePlayer.cpp
        animation/BasePlayer.h
        animation/CharAnimPlayer.cpp
        animation/CharAnimPlayer.h
        animation/SMemMatrixCache.cpp
        animation/SMemMatrixCache.h
        )

set(DATAUTIL_SOURCES
        dataUtil/Bitstream.cpp
        dataUtil/Bitstream.h
        dataUtil/Crc.cpp
        dataUtil/Crc.cpp
        dataUtil/TextIn.cpp
        dataUtil/TextIn.h
        dataUtil/Tokenizer.cpp
        dataUtil/Tokenizer.h
        )

file(GLOB SYSTEM_SOURCES
        system/*.h
        )

set(LEVELS_SOURCES
        levels/LevelLoader.cpp
        levels/LevelLoader.h
        levels/LevelTemplate.cpp
        levels/LevelTemplate.h
        levels/VariableManager.h
        levels/navigation/NavMap.cpp
        levels/navigation/NavMap.h
        )

set(IO_SOURCES
        io/FileSystem.cpp
        io/FileSystem.h
        )

file(GLOB DIALOGS_INCLUDES ui/dialogs/*.h)
file(GLOB DIALOGS_SOURCES ui/dialogs/*.cpp)
file(GLOB UI_INCLUDES ui/*.h)
file(GLOB UI_SOURCES ui/*.cpp)

set(UI_FILES
        ${DIALOGS_INCLUDES}
        ${DIALOGS_SOURCES}
        ${UI_INCLUDES}
        ${UI_SOURCES}
        )

set(OBJECTS_SOURCES 
        objects/render/RenderInst.cpp
        objects/render/RenderInst.h
        objects/render/RigidInst.cpp
        objects/render/RigidInst.h
        objects/render/SkinInst.cpp
        objects/render/SkinInst.h
        objects/render/VirtualMeshMask.cpp
        objects/render/VirtualMeshMask.h
        objects/render/VirtualTextureMask.cpp
        objects/render/VirtualTextureMask.h
        objects/sound/EventSoundEmitter.cpp
        objects/sound/EventSoundEmitter.h
        objects/Actor.cpp
        objects/Actor.h
        objects/AnimSurface.h
        objects/Corpse.cpp
        objects/Corpse.h
        objects/CorpsePain.cpp
        objects/CorpsePain.h
        objects/Event.h
        objects/HudObject.cpp
        objects/HudObject.h
        objects/NewWeapon.cpp
        objects/NewWeapon.h
        objects/Object.cpp
        objects/Object.h
        objects/ObjectRegistrar.cpp
        objects/ObjectRegistrar.h
        objects/ParticleEventEmitter.cpp
        objects/ParticleEventEmitter.h
        objects/Pickup.h
        objects/Player.h
        objects/PlayerCombat.cpp
        objects/PlayerInput.cpp
        objects/PlayerLoco.cpp
        objects/PlayerLoco.h
        objects/PlayerObject.cpp
        objects/PlayerOnline.cpp
        objects/PlayerPhysics.cpp
        objects/PlayerState.cpp
        objects/PlaySurface.cpp
        objects/PlaySurface.h
        objects/Projector.cpp
        objects/Projector.h
        objects/ThirdPersonCamera.cpp
        objects/ThirdPersonCamera.h
)

file(GLOB STATE_INCLUDES state/*.h)
file(GLOB STATE_SOURCES state/*.cpp)

set(STRING_SOURCES
        strings/StringTable.cpp
        strings/StringTable.h
        )

set(RESOURCE_MGR_SOURCES
        resourceManager/ResourceLoaders.cpp
        resourceManager/ResourceLoaders.h
        resourceManager/ResourceManager.cpp
        resourceManager/ResourceManager.h
)

set(OBJECT_MGR_SOURCES
        objectManager/ObjectManager.cpp
        objectManager/ObjectManager.h
)

target_sources(a51lib PRIVATE
        BinLevel.cpp
        BinLevel.h
        Bitmap.cpp
        Bitmap.h
        characters/ActorEffects.h
        characters/ActorEffects.cpp
        characters/factions.h
        characters/FloorProperties.cpp
        characters/FloorProperties.h
        characters/God.cpp
        characters/God.h
        collisionMgr/collisionMgr_Private.h
        collisionMgr/collisionMgr.cpp
        collisionMgr/collisionMgr.h
        collisionMgr/CollisionPrimatives.cpp
        collisionMgr/CollisionPrimatives.h
        collisionMgr/GridWalker.cpp
        collisionMgr/GridWalker.h
        collisionMgr/PolyCache.cpp
        collisionMgr/PolyCache.h
        dataVault/DataVault.cpp
        dataVault/DataVault.h
        decals/DecalDefinition.cpp
        decals/DecalDefinition.h
        decals/DecalMgr.cpp
        decals/DecalMgr.h
        decals/DecalPackage.cpp
        decals/DecalPackage.h
        DFSFile.cpp
        DFSFile.h
        EventMgr.cpp
        EventMgr.h
        fx/fx_Ctrl.cpp
        fx/fx_Effect.cpp
        fx/fx_Element.cpp
        fx/fx_Handle.cpp
        fx/fx_Mgr_insert.h
        fx/fx_Mgr_private.h
        fx/fx_Mgr.cpp
        fx/fx_Mgr.h
        GameGlobals.cpp
        Guid.cpp
        Guid.h
        Helpers.cpp
        Helpers.h
        InevFile.cpp
        InevFile.h
        inputMgr/GamePad.cpp
        inputMgr/GamePad.h
        inputMgr/InputMgr.cpp
        inputMgr/InputMgr.h
        inventory/Inventory.cpp
        inventory/Inventory.h
        loco/CharacterPhysics.cpp
        loco/CharacterPhysics.h
        loco/Loco.cpp
        loco/Loco.h
        loco/LocoAdditiveController.cpp
        loco/LocoAdditiveController.h
        loco/LocoAimController.cpp
        loco/LocoAimController.h
        loco/LocoAnimController.cpp
        loco/LocoAnimController.h
        loco/LocoCharAnimPlayer.cpp
        loco/LocoCharAnimPlayer.h
        loco/locoIKSolver.cpp
        loco/locoIKSolver.h
        loco/LocoMaskController.cpp
        loco/LocoMaskController.h
        loco/LocoMotionController.cpp
        loco/LocoMotionController.h
        math/BoundingBox.cpp
        math/BoundingBox.h
        math/CommonMath.h
        math/Matrix4.cpp
        math/Matrix4.h
        math/Quaternion.cpp
        math/Quaternion.h
        math/Radian3.h
        math/Random.cpp
        math/Random.h
        math/Vector3.cpp
        math/Vector3.h
        painManager/Pain.cpp
        painManager/Pain.h
        painManager/PainMgr.cpp
        painManager/PainMgr.h
        PerceptionMgr.cpp
        PerceptionMgr.h
        physics/Collider.cpp
        physics/Collider.h
        physics/CollisionShape.cpp
        physics/CollisionShape.h
        physics/Constraint.cpp
        physics/Constraint.h
        physics/PhysicsInst.cpp
        physics/PhysicsInst.h
        physics/PhysicsMgr.cpp
        physics/PhysicsMgr.cpp
        physics/RigidBody.cpp
        physics/RigidBody.h
        PlaysurfaceMgr.h
        PlaysurfaceMgr.cpp
        PlaysurfaceDB.h
        PlaysurfaceDB.cpp
        Property.cpp
        Property.h
        PropertyDefs.h
        RigidGeomCollision.cpp
        RigidGeomCollision.h
        render/CollisionVolume.cpp
        render/CollisionVolume.h
        render/Geom.cpp
        render/Geom.h
        render/Material_Prefs.h
        render/Material.cpp
        render/Material.h
        render/MaterialArray.cpp
        render/MaterialArray.h
        render/Render.cpp
        render/Render.h
        render/RigidGeom.cpp
        render/RigidGeom.h
        render/SkinGeom.cpp
        render/SkinGeom.h
        spatialDBase/SpatialDBase.cpp
        spatialDBase/SpatialDBase.h
        spatialDBase/SpatialDBase_inline.h
        streamingOperators.cpp
        streamingOperators.h
        trigger/Trigger_Actions.cpp
        trigger/Trigger_Actions.h
        tweakManager/TweakMgr.cpp
        tweakManager/TweakMgr.h
        VectorMath.h
        View/View.cpp
        View/View.h
        xfiles/scratchMem.cpp
        xfiles/scratchMem.h
        xfiles/x_plus.cpp
        xfiles/x_plus.h
        xfiles/x_time.cpp
        xfiles/x_time.h
        xfiles/xfs.cpp
        xfiles/xfs.h
        xfiles/xHandle.h
        xfiles/xHandleArray.h
        zoneManager/ZoneManager.cpp
        zoneManager/ZoneManager.h

	${GLTF_SOURCES}
        ${ANIM_SOURCES}
        ${DATAUTIL_SOURCES}
        ${SYSTEM_SOURCES}
        ${LEVELS_SOURCES}
        ${IO_SOURCES}
        ${OBJECT_MGR_SOURCES}
        ${RESOURCE_MGR_SOURCES}
        ${UI_FILES}
        ${STATE_INCLUDES}
        ${STATE_SOURCES}
        ${STRING_SOURCES}
        ${OBJECTS_SOURCES}
)

target_compile_features(a51lib PUBLIC cxx_std_20)

target_link_libraries(a51lib SDL3::SDL3)
